--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,6 +3,6 @@
     <img src="/assets/shopping.jpg" width="320" height="240">
   </div>
   <div class="site-slogan">
-    <h2>Your one stop shop for everything.</h2>
+    <h2>{{slogan}}</h2>
   </div>
 </div>
