Two way data binding | Data Binding

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,5 +1,5 @@
 <div class="search-div">
   <span><b>Search:</b></span>
-  <input type="text" (input)="changeSearchValue($event)"><br>
+  <input type="text" [(ngModel)]="searchValue"><br>
   <span>You searched for "{{ searchValue}}"</span>
 </div>
