--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,6 +1,6 @@
 <div *ngFor="let item of products; let i=index">
   <p>{{i}}</p>
-  <div class="product-container">
+  <div class="product-container" [ngStyle]="{backgroundColor:item.brand=='Apple'?'Beige':'White'}">
     <div class="image-container"><img [src]="item.image" alt="" style="max-height: 50px;max-width: 50px;"></div>
     <div>
       <div class="name-container">
